<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".ActivitateaVapor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/adauga_un_vapor_nou"
            android:textSize="23sp"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/denumire_vapor"
            android:textSize="12sp"></TextView>

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Denumire Vapor"
            android:inputType="text" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/al_catelea_vapor_este"
            android:textSize="12sp"></TextView>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/spinnerItems"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/detalii_vapor"
            android:textSize="12sp"></TextView>

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="Detalii vapor"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/de_marfa"
            android:textSize="12sp"
            android:layout_gravity="center"></TextView>

        <RadioGroup
            android:id="@+id/rGROUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_de_marfa"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="DA" />

            <RadioButton
                android:id="@+id/radio_de_persoane"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="NU" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/cati_m_lungime"
            android:textSize="12sp"
            android:layout_gravity="center"></TextView>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_const_vapor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Construieste vapor" />

</LinearLayout>